<resources>
    <string name="app_name">Mp Inspector</string>

    <!--mpFragment-->
    <string name="mpFragFullName">%1$s %2$s</string>
    <string name="mpFragIsMinister">Minister</string>
    <string name="mpFragAge">Age %1$d</string>

    <!--Party names-->
    <string name="partyKok">Kokoomus</string>
    <string name="partyKesk">Keskusta</string>
    <string name="partyLiik">Liike Nyt</string>
    <string name="partyVas">Vasemmisto Liitto</string>
    <string name="partyVihr">Vihreät</string>
    <string name="partyPs">Perussuomalaiset</string>
    <string name="partySd">SDP</string>
    <string name="partyKd">Kristillisdemokraatit</string>
    <string name="partyR">RKP</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="leave_a_comment">Leave a Comment</string>
    <string name="mp_party_icon_desc">MP Party Icon</string>
    <string name="mp_image_desc">MP image</string>
    <string name="mp_profile_picture">Mp profile picture</string>
    <string name="content_desc_party_icon">Party Icon</string>
    <string name="content_desc_open_in_twitter">Open in twitter</string>
    <string name="desc_add_to_twitter_feed">Add to twitter feed.</string>
    <string name="desc_add_note">Add note.</string>
    <string name="add_to_favorites">Add to favorites.</string>

</resources>