<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/personName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="Name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personName">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mp_card_bg"
            android:orientation="vertical">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipKok"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:checked="true"
                    android:text="@string/partyKok"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPs"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:checkable="true"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/partyPs"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipVas"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:checkable="true"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/partyVas"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipKesk"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:checkable="true"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/partyKesk"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipKd"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:checkable="true"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/partyKd"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipLiik"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:checkable="true"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/partyLiik"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipR"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:checkable="true"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/partyR"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSd"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:checkable="true"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/partySd"
                    android:textSize="16sp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipVihr"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:checkable="true"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/partyVihr"
                    android:textSize="16sp" />

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:name="com.example.mpinspector.MpListItemFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
        tools:context=".ui.mplist.MpListFragment"
        tools:listitem="@layout/fragment_list_mp_item" />

    <ProgressBar
        android:id="@+id/loadingSpinner"
        style="?android:attr/progressBarStyle"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
        tools:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>


</layout>
