<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Parties Fragment (LIST)"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.chip.ChipGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/partyKok" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/partyPs" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/partyVas" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/partyKesk" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </com.google.android.material.chip.ChipGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

