<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="7dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tweetContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autoLink="web"
                tools:text="Content"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/createdAt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tweetAuthor"
                app:layout_constraintTop_toBottomOf="@+id/tweetAuthor"
                app:layout_constraintVertical_bias="0.026" />

            <TextView
                android:id="@+id/createdAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                tools:text="11.06.2020"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tweetContent" />

            <TextView
                android:id="@+id/tweetAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="-2dp"
                tools:text="TextView"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tweetProfilePic"
                app:layout_constraintTop_toTopOf="@+id/tweetProfilePic" />

            <ImageView
                android:id="@+id/tweetProfilePic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:shadowDx="10"
                android:shadowDy="10"
                android:shadowColor="@color/cardview_shadow_end_color"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/mp_profile_picture" />

            <ImageView
                android:id="@+id/tweetOpen"
                android:layout_width="30dp"
                android:layout_height="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tweetAuthor"
                app:srcCompat="@drawable/ic_twitter_filled"
                android:contentDescription="@string/content_desc_open_in_twitter" />

            <ImageView
                android:id="@+id/TweetPartyIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="1.4"
                android:scaleY="1.3"
                app:layout_constraintEnd_toEndOf="@+id/tweetProfilePic"
                app:layout_constraintStart_toStartOf="@+id/tweetProfilePic"
                app:layout_constraintTop_toBottomOf="@+id/tweetProfilePic"
                app:srcCompat="@mipmap/ic_party_ps"
                android:contentDescription="@string/content_desc_party_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</layout>
